# LoopOver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.txt
.github/workflows/: build.yml
include/: bottle.h  main.h  plist.h
src/: bottle.c  bottle.h  main.c  plist.c  plist.h
